//  python -m grpc_tools.protoc --proto_path=. ./parameter_server.proto --python_out=. --grpc_python_out=. 
//  import job_sim.channels.parameter_server_pb2 as parameter_server__pb2

syntax = "proto3";

package parameter_server;

service Parameter_server {
    rpc CLIENT_REQUEST (client_id) returns (plan) {}
    rpc CLIENT_REPORT (client_report) returns (empty) {}
}

message plan {
    bool ack = 1;
    int32 workload = 2;
}

message client_id {
    int32 id = 1;
}

message client_report {
    int32 client_id = 1;
    float result = 2;
}

message empty {
}

